[workspace]
resolver = "3"
members = [
    "bin",
    "storage",
    "http",
    "grpc"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde_json = "1.0.145"
async-trait = "0.1.89"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["default", "test-util", "macros"]}
